set relative paths in notebook

--- a/test/BDD.ipynb
+++ b/test/BDD.ipynb
@@ -58,11 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "LoadError",
+     "evalue": "UndefVarError: lenient not defined",
+     "traceback": [
+      "UndefVarError: lenient not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[28]:2",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
+    }
+   ],
    "source": [
-    "using ExecutableSpecifications"
+    "using ExecutableSpecifications\n",
+    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions=lenient)"
    ]
   },
   {
