--- a/test/BDD.ipynb
+++ b/test/BDD.ipynb
@@ -41,36 +41,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "┌ Info: Precompiling CSV [336ed68f-0bac-5ca0-87d4-7b16caf5d00b]\n└ @ Base loading.jl:1317\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
      "ename": "LoadError",
-     "evalue": "UndefVarError: lenient not defined",
+     "evalue": "UndefVarError: ParseOptions not defined",
      "traceback": [
-      "UndefVarError: lenient not defined",
+      "UndefVarError: ParseOptions not defined",
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[28]:2",
+      "   @ In[3]:2",
       " [2] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -80,7 +72,8 @@
    ],
    "source": [
     "using ExecutableSpecifications\n",
-    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions=lenient)"
+    "parseOpt = ParseOptions(allow_any_step_order=true)\n",
+    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions = parseOpt)"
    ]
   },
   {
