--- a/test/BDD.ipynb
+++ b/test/BDD.ipynb
@@ -24,33 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Geeksforgeeks is fantastic!\n"
-     ]
-    }
-   ],
-   "source": [
-    "println(\"Geeksforgeeks is fantastic!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +36,7 @@
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[3]:2",
+      "   @ In[7]:2",
       " [2] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -72,8 +46,8 @@
    ],
    "source": [
     "using ExecutableSpecifications\n",
-    "parseOpt = ParseOptions(allow_any_step_order=true)\n",
-    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions = parseOpt)"
+    "lenient = ParseOptions(allow_any_step_order=true)\n",
+    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions = lenient)"
    ]
   },
   {
