--- a/test/BDD.ipynb
+++ b/test/BDD.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[7]:2",
+      "   @ In[26]:2",
       " [2] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -46,8 +46,8 @@
    ],
    "source": [
     "using ExecutableSpecifications\n",
-    "lenient = ParseOptions(allow_any_step_order=true)\n",
-    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions = lenient)"
+    "parseoptions = ParseOptions(allow_any_step_order=true)\n",
+    "suggestmissingsteps(\"./test/behaviour/features/concept/thing/attribute.feature\", \"./test/behaviour/features/steps\", parseoptions=parseoptions)"
    ]
   },
   {
