add catch all steps.jl & entity.feature steps

--- a/test/BDD.ipynb
+++ b/test/BDD.ipynb
@@ -2,348 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "using ExecutableSpecifications\n",
-      "\n",
-      "@when(\"\\$x = attribute(is-alive) as(boolean) put: true\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x is null: false\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has type: is-alive\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has value type: boolean\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has boolean value: true\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"transaction commits\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"session opens transaction of type: read\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(is-alive) as(boolean) get: true\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(age) as(long) put: 21\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has type: age\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has value type: long\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has long value: 21\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(age) as(long) get: 21\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(score) as(double) put: 123.456\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has type: score\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has value type: double\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has double value: 123.456\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(score) as(double) get: 123.456\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(name) as(string) put: alice\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has type: name\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has value type: string\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has string value: alice\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(name) as(string) get: alice\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(email) as(string) put: alice@email.com\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has type: email\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has string value: alice@email.com\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(email) as(string) get: alice@email.com\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"attribute(email) as(string) put: alice-email-com; throws exception\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(birth-date) as(datetime) put: 1990-01-01 11:22:33\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has type: birth-date\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has value type: datetime\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has datetime value: 1990-01-01 11:22:33\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(birth-date) as(datetime) get: 1990-01-01 11:22:33\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute(is-alive) get instances contain: \\$x\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute(age) get instances contain: \\$x\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute(score) get instances contain: \\$x\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute(name) get instances contain: \\$x\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute(birth-date) get instances contain: \\$x\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"delete attribute: \\$x\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x is deleted: true\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x is null: true\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"session opens transaction of type: write\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(score) as(double) put: 123\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@then(\"attribute \\$x has double value: 123\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@when(\"\\$x = attribute(score) as(double) get: 123\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"connection has been opened\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"connection does not have any database\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"connection create database: grakn\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"connection open schema session for database: grakn\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put attribute type: is-alive, with value type: boolean\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put attribute type: age, with value type: long\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put attribute type: score, with value type: double\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put attribute type: birth-date, with value type: datetime\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put attribute type: name, with value type: string\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put attribute type: email, with value type: string\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"attribute(email) as(string) set regex: \\\\S+@\\\\S+\\\\.\\\\S+\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"put entity type: person\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"entity(person) set owns attribute type: is-alive\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"entity(person) set owns attribute type: age\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"entity(person) set owns attribute type: score\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"entity(person) set owns attribute type: name\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"entity(person) set owns attribute type: email\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"entity(person) set owns attribute type: birth-date\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"connection close all sessions\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n",
-      "@given(\"connection open data session for database: grakn\") do context\n",
-      "    @fail \"Implement me\"\n",
-      "end\n",
-      "\n",
-      "\n"
+      "using ExecutableSpecifications\n\n@when(\"\\$a = entity(person) create new instance with key(username): alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a is null: false\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a has type: person\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity(person) get instances contain: \\$a\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"transaction commits\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"session opens transaction of type: read\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$a = entity(person) get instance with key(username): alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$a = entity(person) create new instance\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"transaction commits; throws exception\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"delete entity: \\$a\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a is deleted: true\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity(person) get instances is empty\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"session opens transaction of type: write\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$alice = attribute(username) as(string) put: alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"entity \\$a set has: \\$alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get attributes(username) as(string) contain: \\$alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get keys contain: \\$alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"attribute \\$alice get owners contain: \\$a\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$alice = attribute(username) as(string) get: alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"entity \\$a unset has: \\$alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get attributes(username) as(string) do not contain: \\$alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get keys do not contain: \\$alice\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"attribute \\$alice get owners do not contain: \\$a\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$bob = attribute(username) as(string) put: bob\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a set has: \\$bob; throws exception\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$bob = attribute(username) as(string) get: bob\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$b = entity(person) create new instance\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$b set has: \\$alice; throws exception\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$email = attribute(email) as(string) put: alice@email.com\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"entity \\$a set has: \\$email\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get attributes(email) as(string) contain: \\$email\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get attributes contain: \\$email\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"attribute \\$email get owners contain: \\$a\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"\\$email = attribute(email) as(string) get: alice@email.com\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"entity \\$a unset has: \\$email\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get attributes(email) as(string) do not contain: \\$email\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"entity \\$a get attributes do not contain: \\$email\") do context\n    @fail \"Implement me\"\nend\n\n\n@then(\"attribute \\$email get owners do not contain: \\$a\") do context\n    @fail \"Implement me\"\nend\n\n\n@when(\"entity \\$a set has: \\$email; throws exception\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"connection has been opened\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"connection does not have any database\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"connection create database: grakn\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"connection open schema session for database: grakn\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"put attribute type: username, with value type: string\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"put attribute type: email, with value type: string\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"put entity type: person\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"entity(person) set owns key type: username\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"entity(person) set owns attribute type: email\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"connection close all sessions\") do context\n    @fail \"Implement me\"\nend\n\n\n@given(\"connection open data session for database: grakn\") do context\n    @fail \"Implement me\"\nend\n\n\n"
      ]
     }
    ],
    "source": [
-    "using ExecutableSpecifications\n",
+    "using ExecutableSpecifications: suggestmissingsteps, ParseOptions\n",
     "\n",
     "parseoptions = ParseOptions(allow_any_step_order=true)\n",
-    "suggestmissingsteps(joinpath(@__DIR__, \"behaviour/features/concept/thing/attribute.feature\"),joinpath(@__DIR__, \"behaviour/features/steps\"), parseoptions=parseoptions)"
+    "suggestmissingsteps(joinpath(@__DIR__, \"behaviour/features/concept/thing/entity.feature\"),joinpath(@__DIR__, \"behaviour/features/steps\"), parseoptions=parseoptions)"
    ]
   },
   {
