add entity type test

--- a/test/BDD.ipynb
+++ b/test/BDD.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "\"/Users/ulzee/dev/TypeDBClient.jl/test/test/behaviour/config/ConfigEnvironment.jl\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,10 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "using TypeDBClient\n",
+    "using Behavior\n",
+    "using Behavior.Gherkin\n",
     "g = TypeDBClient\n",
     "\n",
     "client = g.CoreClient(\"localhost\",1729)\n",
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +106,7 @@
       " [13] runspec(rootpath::String; featurepath::String, stepspath::String, execenvpath::String, parseoptions::ParseOptions, presenter::ColorConsolePresenter, tags::String)",
       "    @ Behavior ~/.julia/packages/Behavior/ysH8E/src/runner.jl:119",
       " [14] top-level scope",
-      "    @ In[17]:3",
+      "    @ In[23]:3",
       " [15] eval",
       "    @ ./boot.jl:360 [inlined]",
       " [16] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -139,10 +142,8 @@
    "name": "julia-1.6"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.1"
+   "version": ""
   }
  },
  "nbformat": 4,
